--- a/Proyecto/index.css
+++ b/Proyecto/index.css
@@ -56,10 +56,18 @@ body {
     width: 80px;
     height: 80px;
     text-align: left;
+    position: relative;
 }
 
 .d2 .icoCompra:hover {
     scale: 1.3;
+}
+
+
+.d2 #cantidadCarrito {
+    position: absolute;
+    bottom: 17px;
+    color:rgb(228, 125, 36);
 }
 
 /* ------------ Menú ----------- */
@@ -102,6 +110,8 @@ h2 {
     margin: 5%;
 }
 
+
+/****** Formato platos del menu ******/
 .prueba1 {
     display: flex;
     justify-content: space-between;
@@ -129,39 +139,53 @@ h2 {
     text-align: justify;
 }
 
-.icoMas {
-    width: 50px;
-}
-
+/*Descripciones del menú*/
 .info {
     display: flex;
     align-items: center;
 }
-
 
 .imgTexto p {
     margin: 10px;
     text-align: center;
 }
 
+/****  Botones de añadir y borrar elementos  *****/
+
 .precio {
+    padding: 0 30px;
     display: flex;
     align-items: center;
 }
 
+.precio button {
+    margin: 20px;
+    border: 1px solid green;
+    background-color: transparent; /* Hace que el fondo sea transparente */
+    padding: 0; /* Quita el relleno */
+    margin: 0; /* Quita el margen */
+    cursor: pointer; 
+}
+
 .precio img {
-    margin: 0 5px;
+    margin: 0 15px;
     width: 30px;
 }
 
-.precio p {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+
+img.icoMenos {
+    width: 37px;
+    height: 30px;
 }
 
-.icoMas:hover{
+.icoMas:hover, .icoMenos:hover{
     scale: 1.3;
 }
 
+.precio p {
+    margin: 0 5px;
+}
 
 .footer{
     background-color: rgb(228, 125, 36);
