--- a/Proyecto/index.css
+++ b/Proyecto/index.css
@@ -66,7 +66,8 @@ body {
 
 .d2 #cantidadCarrito {
     position: absolute;
-    bottom: 17px;
+    bottom: 20px;
+    right: 24;
     color:rgb(228, 125, 36);
 }
 
