--- a/Proyecto/pago.css
+++ b/Proyecto/pago.css
@@ -7,7 +7,6 @@
 
 
 /* --------------- Cabecera  ----------------  */
-
 body {
     padding-top: 200px;
 }
@@ -59,18 +58,17 @@ body {
     position: relative;
 }
 
-.d2 .icoCompra:hover {
+/*.d2 .icoCompra:hover {
     scale: 1.3;
-}
+}*/
 
 
 .d2 #cantidadCarrito {
     position: absolute;
     bottom: 18px;
-    right: 35;
+    right: 24;
     color:rgb(228, 125, 36);
 }
-
 /*--------------- Cuerpo -------------*/
 
 h1 {
@@ -80,5 +78,154 @@ h1 {
 
 .contenedorPedido {
     margin: 30px 0;
+    padding: 20px;
     border: 1px solid green;
+    display: flex;
+    flex-direction: column;
+}
+
+.lineaP {
+    display: flex;
+    margin: 10px;
+}
+
+.lineaP p {
+    margin: 0 20px;
+}
+
+hr {
+    margin: 10px 0;
+}
+
+img.icoMenos {
+    width: 37px;
+    height: 30px;
+}
+
+.lineaP button {
+    margin: 20px;
+    border: none;
+    background-color: transparent; 
+    padding: 0; 
+    margin: 0; 
+    cursor: pointer; 
+}
+
+
+hr {
+    margin: 15px 0;
+}
+
+.pTotal {
+    text-align: center;
+}
+
+
+
+/*------------Formulario de pago--------------*/
+
+.contenedorForm {
+    background-color: rgba(44, 160, 206);
+
+}
+
+h3 {
+    text-align: center;
+    background-color:  rgb(228, 125, 36);
+}
+
+
+.formularioPago {
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 30px 0;
+    width: 100%;
+
+}
+
+.formularioPago div {
+    margin: 10px 0;
+    display: flex;
+    justify-content:space-between;
+    width: 60%;
+}
+
+.formularioPago label {
+    text-decoration: underline;
+}
+
+.formularioPago input, .formularioPago select {
+    width: 220px;
+}
+
+.formularioPago select {
+    text-align: center;
+}
+
+
+#direcEnvio {
+    display: flex;
+    flex-direction: column;
+    justify-content: right;
+    align-items: end;
+}
+
+#direcEnvio div {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+}
+
+/* Botón del formulario */
+
+.formularioPago button {
+    padding: 5px;
+    margin: 20px 0;
+    border-radius: 40%;
+    transition: background-color 1s ease;
+}
+
+.formularioPago button:hover{
+    background-color: rgb(0, 128, 0, 0.1);
+}
+
+/*----------Footer----------*/
+
+
+.footer{
+    background-color: rgb(228, 125, 36);
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-around;
+    padding: 50px;
+    position:static;
+    bottom: 0px;
+    width: 100%;
+}
+
+.footer p {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin: 5px 0;
+}
+
+.footer .condiciones {
+    width: 100%;
+    margin-top: 20px;
+}
+
+.footer a {
+   text-decoration: none;
+   padding: 20px;
+   color: black;
+}
+
+.footer a:hover {
+    color: white;
+    text-decoration: underline;
 }
