--- a/Proyecto/index.css
+++ b/Proyecto/index.css
@@ -22,6 +22,7 @@ body {
     background-color: white;
     background-color: rgb(0, 128, 0, 0.1);
     top: 0;
+    z-index: 1;
 }
 
 .cabecera div  {
@@ -73,12 +74,28 @@ body {
 
 /* ------------ Menú ----------- */
 
+.menu .tituloPatita {
+    display: flex;
+    justify-content: center;
+    margin: 30px 0;
+}
+
+.menu .tituloPatita .icoPatita {
+    position: relative;
+    text-align: center;
+    width: 180px;
+    z-index: 0;
+    opacity: 0.4;
+}
+
 
 /*Título del menú*/
 .menu .titMenu { 
     margin: 40px 0;
-    text-decoration: underline;
+  /*  text-decoration: underline; */
     padding: 50px;
+    position: absolute;
+
 
 }
 
@@ -95,10 +112,6 @@ h2 {
 }
 
 
-h2 {
-    color: rgb(228, 125, 36);
-}
-
 .contenedorEtiquetas {
     display: flex;
     flex-direction: column;
@@ -109,6 +122,7 @@ h2 {
 
 .etiqueta {
     margin: 5%;
+
 }
 
 
@@ -117,7 +131,6 @@ h2 {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid green;
-
 }
 
 /* Contenedor de las imagenes con los textos*/
