--- a/Proyecto/paginaMenu/index.css
+++ b/Proyecto/paginaMenu/index.css
@@ -9,7 +9,7 @@
 /* --------------- Cabecera  ----------------  */
 
 body {
-    padding-top: 200px;
+    padding-top: 150px;
 }
 
 
@@ -53,6 +53,8 @@ body {
     align-items: flex-end;
 }
 
+/*Icono bolsa compra*/
+
 .icoCompra {
     width: 80px;
     height: 80px;
@@ -60,10 +62,8 @@ body {
     position: relative;
 }
 
-/*.d2 .icoCompra:hover {
-    scale: 1.3;
-}*/
 
+/*número de la cantidad del icono de compra*/
 
 .d2 #cantidadCarrito {
     position: absolute;
@@ -77,22 +77,23 @@ body {
 .menu .tituloPatita {
     display: flex;
     justify-content: center;
-    margin: 30px 0;
+    margin: 40px 0;
 }
 
 .menu .tituloPatita .icoPatita {
     position: relative;
     text-align: center;
-    width: 180px;
+    width: 150px;
     z-index: 0;
     opacity: 0.4;
+    rotate: 180deg;
+    top: 40px;
 }
 
 
 /*Título del menú*/
 .menu .titMenu { 
     margin: 40px 0;
-  /*  text-decoration: underline; */
     padding: 50px;
     position: absolute;
 
@@ -104,7 +105,7 @@ h1, h2 {
     text-align: center;
     text-transform:uppercase;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin-top: 30px;
+    margin-top: 60px;
 }
 
 h2 {
@@ -214,6 +215,7 @@ img.icoMenos {
     text-align: center;
     justify-content: space-around;
     padding: 50px;
+    margin-top: 50px;
 }
 
 .footer p {
