--- a/proyectoPanel/paginaDetallesPedido/detallePedido.css
+++ b/proyectoPanel/paginaDetallesPedido/detallePedido.css
@@ -86,3 +86,11 @@ h2 {
 .tablaDetallesPedido td {
     font-weight: 600;
 }
+
+.detalles {
+    margin: 20px 0;
+    text-align: center;
+    padding: 10px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid black;
+}
