Commit 14 rama Admin, añadiendo modificar carta
Desarrollando la pestaña de modificar la carta. Más adelante se implementan también las opciones de crear nueva categoría o crear nuevo plato.

--- a/proyectoPanel/paginaListaPedidos/listaPedidos.css
+++ b/proyectoPanel/paginaListaPedidos/listaPedidos.css
@@ -33,7 +33,7 @@
 }
 
 
-.contIcono .icoCerrarSesion {
+.contIcono .icoCerrarSesion, .contIcono .icoCarta {
     width: 40px;
     margin: 5px 10px;
 }
