--- a/proyectoPanel/paginaDetallesPedido/detallePedido.css
+++ b/proyectoPanel/paginaDetallesPedido/detallePedido.css
@@ -5,22 +5,40 @@
     font-family: league system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+/*---------------CABECERA-------------*/
+
 .cabecera {
     display: flex;
     flex-direction: column;
+    background-image: url("../imagenesPanel/imagenesFondo/fondoCabecera.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    position:fixed;
+    top: 0;
+    left: 0;
 }
 
-
+/*Contenedor del logo*/
 .contLogo {
     display: flex;
     justify-content: center;
-    /*border: 1px solid black;*/
+    align-items: center;
+
+    width: 190px;
+    height: 160px;
+    border-radius: 100%;
+    margin: 10px auto;
+
+    background-color: rgb(255, 255, 255, 0.85);
 }
 
 
+/*Logo*/
 .cabecera .contLogo .logo {
-    width: 200px;
-    margin: 10px 20px;
+    width: 150px;
+    margin: 10px;
 }
 
 .contIcono {
@@ -32,40 +50,91 @@
     align-items: center;
 }
 
-.contIcono hr {
-    color:  rgb(68, 105, 156);
-}
 
-
-.contIcono .iconoCasa{
+/*Icono volver*/
+.contIcono .icoVolver{
     width: 50px;
-    margin: 0;
+    margin: 5px;
 }
 
-.contIcono .icoCerrarSesion {
+/*---------------MENÚ CABECERA--------------------*/
+
+.menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*Título del menú*/
+
+.menu .contTitulo {
+    width: 100%;
+    background-color: rgb(25, 54, 95, 0.85);
+    padding: 12px;
+}
+
+
+/*Iconos del menú*/
+
+.menu .contTitulo h2 {
+        text-align: center;
+        color: rgb(255, 255, 255);
+        text-transform: uppercase;
+}
+
+.menu .contIconosMenu {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: rgb(255, 255, 255, 0.85);
+    padding: 5px;
+}
+
+.menu .icoCerrarSesion {
+    width: 30px;
+}
+
+.menu .icoCarta {
+    width: 30px;
+}
+
+.menu .icoLista {
     width: 40px;
+}
+
+.menu img {
     margin: 0 10px;
 }
 
-/*-----------Título página-----------*/
 
-h2 {
-    text-align: center;
-    margin-top: 20px 0;
-    padding: 10px;
-    background-color: rgb(68, 105, 156);
-    color: white;
-    text-transform: uppercase;
+
+/*-----------CUERPO PÁGINA-------------*/
+
+
+.cuerpo {
+    background-image: url("../imagenesPanel/imagenesFondo/fondoPaginaLista.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin-top: 275px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-
 
 /*-----------Tabla detalles pedido-------------*/
 
 .tablaDetallesPedido {
-    border: 1px solid black;
     display: flex;
     justify-content: center;
-    padding: 20px;
+    padding: 10px;
+    margin-top: 120px;
+    background-color: hsla(32, 58%, 55%, 0.85);
+
+    width: 70%;
+    border: 1px solid black;
+    border-radius: 1%;
 }
 
 .tablaDetallesPedido th, .tablaDetallesPedido td {
@@ -93,4 +162,19 @@ h2 {
     padding: 10px;
     padding-bottom: 15px;
     border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    margin-bottom: 120px;
+    background-color: hsla(32, 48%, 59%, 0.70);
+
+}
+
+/*Footer*/
+
+.footer {
+    background-color: rgb(25, 54, 95, 0.85);
+    padding: 20px;
+    position: static;
+    bottom: 0;
+    margin: 0;
+    width: 100%;
 }
