--- a/proyectoPanel/paginaModificarCarta/modificarCarta.css
+++ b/proyectoPanel/paginaModificarCarta/modificarCarta.css
@@ -5,22 +5,41 @@
     font-family: league system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+
+/*---------------CABECERA-------------*/
+
 .cabecera {
     display: flex;
     flex-direction: column;
+    background-image: url("../imagenesPanel/imagenesFondo/fondoCabecera.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    position:fixed;
+    top: 0;
+    left: 0;
 }
 
-
+/*Contenedor del logo*/
 .contLogo {
     display: flex;
     justify-content: center;
-    /*border: 1px solid black;*/
+    align-items: center;
+
+    width: 190px;
+    height: 160px;
+    border-radius: 100%;
+    margin: 10px auto;
+
+    background-color: rgb(255, 255, 255, 0.85);
 }
 
 
+/*Logo*/
 .cabecera .contLogo .logo {
-    width: 200px;
-    margin: 10px 20px;
+    width: 150px;
+    margin: 10px;
 }
 
 .contIcono {
@@ -32,45 +51,103 @@
     align-items: center;
 }
 
-.contIcono hr {
-    color:  rgb(68, 105, 156);
-}
 
-
-.contIcono .iconoCasa{
+/*Icono volver*/
+.contIcono .icoVolver{
     width: 50px;
-    margin: 0;
+    margin: 5px;
 }
 
-.contIcono .icoCerrarSesion {
+/*---------------MENÚ CABECERA--------------------*/
+
+.menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*Título del menú*/
+
+.menu .contTitulo {
+    width: 100%;
+    background-color: rgb(25, 54, 95, 0.85);
+    padding: 12px;
+}
+
+
+/*Iconos del menú*/
+
+.menu .contTitulo h2 {
+        text-align: center;
+        color: rgb(255, 255, 255);
+        text-transform: uppercase;
+}
+
+.menu .contIconosMenu {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: rgb(255, 255, 255, 0.85);
+    padding: 6px;
+}
+
+.menu .icoCerrarSesion {
+    width: 30px;
+}
+
+.menu .icoCarta {
+    width: 30px;
+}
+
+.menu .icoLista {
     width: 40px;
+}
+
+.menu img {
     margin: 0 10px;
 }
 
-/*-----------Título página-----------*/
-
-h2 {
-    text-align: center;
-    margin-top: 20px 0;
-    padding: 10px;
-    background-color: #44699c;
-    color: white;
-    text-transform: uppercase;
+.visitado {
+    filter: invert(100%);
 }
+
+/*--------------------CUERPO PÁGINA-------------------*/
+
+
+/*Fondo de imagen para todo el cuerpo*/
+
+.cuerpo {
+   
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    margin-top: 260px;
+}
+
 
 /*-----------Categorías----------------*/
 
 .contenedorCategorias {
-    margin: 20px;
+    margin: 30px;
 }
 
 
 .contenedorCategorias h3 {
     text-align: center;
     text-transform: uppercase;
-    margin: 30px
-    0;
+    margin: 30px 0;
 
+}
+
+.contenedorCategorias .descripcion {
+    text-align: justify;
 }
 
 .categoria {
@@ -99,4 +176,8 @@ h2 {
 
 .iconoMod {
     width: 45px;
+}
+
+.iconoMod:hover{
+    scale: 1.2;
 }
