--- a/proyectoPanel/paginaModificarProducto/modificarProducto.css
+++ b/proyectoPanel/paginaModificarProducto/modificarProducto.css
@@ -5,8 +5,8 @@
     font-family: league system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+/*---------------------------CABECERA------------------------------*/
 
-/*Cabecera*/
 
 .cabecera {
     display: flex;
@@ -15,7 +15,67 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    width: 100%;
+
+    position: fixed;
+    top: 0;
 }
+
+/*--------------ICONOS DE LA CABECERA-----------*/
+
+.cabecera .iconosCab {
+    display: flex;
+    background-color: rgb(255, 255, 255, 0.85);
+}
+
+/*Icono volver*/
+.contIconoVolver {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+}
+
+.contIconoVolver .icoVolver{
+    width: 40px;
+}
+
+
+.cabecera .iconosNav {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 95%;
+}
+
+.iconosCab .contIconoVolver , .iconosCab .iconosNav .contIcono {
+    border-radius: 100%;
+}
+
+.iconosCab .iconosNav .icoCerrarSesion {
+    width: 35px;
+}
+
+.iconosCab .iconosNav .icoCarta {
+    width: 35px;
+}
+
+.iconosCab .iconosNav .icoLista {
+    width: 43px;
+    margin: 5px 10px;
+}
+
+.iconosCab .iconosNav img {
+    margin: 0 10px;
+}
+
+
+.contIconoVolver .icoVolver:hover{
+    scale: 1.2;
+}
+
+/*------------LOGO-------------*/
+
 
 /*Contenedor del logo*/
 .contLogo {
@@ -32,97 +92,34 @@
 }
 
 
-/*Logo*/
 .cabecera .contLogo .logo {
     width: 150px;
     margin: 10px;
 }
 
-.contIcono {
-    width: 100%;
-    display: flex;
-    flex-direction: row-reverse;
-    align-items:end;
-    vertical-align: middle;
-    align-items: center;
-}
 
-.contIcono hr {
-    color:  rgb(41, 73, 117);
-}
+/*--------------TÍTULO DE LA PÁGINA------------*/
 
-/*Icono volver*/
-.contIcono .icoVolver{
-    width: 50px;
-    margin: 5px;
-}
-
-.contIcono .icoCerrarSesion {
-    width: 40px;
-    margin: 0 10px;
-}
-
-
-
-/*Fondo de imagen para todo el cuerpo*/
-
-.cuerpo {
-    background-image: url("../imagenesPanel/imagenesFondo/fondoPagina.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-
-/*-----Menú horizontal----*/
-
-.menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/*Título del menú*/
-
-.menu .contTitulo {
+.cabecera .contTitulo {
     width: 100%;
     background-color: rgb(25, 54, 95, 0.85);
     padding: 12px;
 }
 
-
-/*Iconos del menú*/
-
-.menu .contTitulo h2 {
-        text-align: center;
-        color: rgb(255, 255, 255);
-        text-transform: uppercase;
-}
-
-.menu .contIconosMenu {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    background-color: rgb(255, 255, 255, 0.85);
-    padding: 5px;
-}
-
-.menu .icoCerrarSesion {
-    width: 30px;
-}
-
-.menu .icoCarta {
-    width: 30px;
-}
-
-.menu .icoLista {
-    width: 40px;
+.cabecera .contTitulo h2 {
+    text-align: center;
+    color: rgb(255, 255, 255);
+    text-transform: uppercase;
 }
 
 
-.menu img {
-    margin: 0 10px;
-}
 
+/*---------------------------CUERPO----------------------------*/
+
+
+.cuerpo {
+    margin-top: 350px;
+}
 
 
 /*------Formulario------*/
@@ -133,8 +130,7 @@
 
     padding: 50px;
     width: 70%;
-    margin: 10px auto;
-    
+    margin: 30px auto;
     background-color: hsla(32, 58%, 55%, 0.95);
     border: 1px solid black;
     border-radius: 1%;
@@ -146,7 +142,6 @@
     margin-top: 10px;
     padding: 5px;
     width: 90%;
-
 }
 
 .formularioModif textarea {
