--- a/proyectoPanel/paginaDetallesPedido/detallePedido.css
+++ b/proyectoPanel/paginaDetallesPedido/detallePedido.css
@@ -5,7 +5,9 @@
     font-family: league system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-/*---------------CABECERA-------------*/
+
+/*---------------------------CABECERA------------------------------*/
+
 
 .cabecera {
     display: flex;
@@ -15,10 +17,65 @@
     background-size: cover;
     background-position: center;
     width: 100%;
-    position:fixed;
+
+    position: fixed;
     top: 0;
-    left: 0;
 }
+
+/*--------------ICONOS DE LA CABECERA-----------*/
+
+.cabecera .iconosCab {
+    display: flex;
+    background-color: rgb(255, 255, 255, 0.85);
+}
+
+/*Icono volver*/
+.contIconoVolver {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+}
+
+.contIconoVolver .icoVolver{
+    width: 40px;
+}
+
+
+.cabecera .iconosNav {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 95%;
+}
+
+.iconosCab .contIconoVolver , .iconosCab .iconosNav .contIcono {
+    border-radius: 100%;
+}
+
+.iconosCab .iconosNav .icoCerrarSesion {
+    width: 35px;
+}
+
+.iconosCab .iconosNav .icoCarta {
+    width: 35px;
+}
+
+.iconosCab .iconosNav .icoLista {
+    width: 43px;
+    margin: 5px 10px;
+}
+.iconosCab .iconosNav img {
+    margin: 0 10px;
+}
+
+
+.contIconoVolver .icoVolver:hover, .iconosNav img:hover {
+    scale: 1.2;
+}
+
+/*------------LOGO-------------*/
+
 
 /*Contenedor del logo*/
 .contLogo {
@@ -35,84 +92,34 @@
 }
 
 
-/*Logo*/
 .cabecera .contLogo .logo {
     width: 150px;
     margin: 10px;
 }
 
-.contIcono {
-    width: 100%;
-    display: flex;
-    flex-direction: row-reverse;
-    align-items:end;
-    vertical-align: middle;
-    align-items: center;
-}
 
+/*--------------TÍTULO DE LA PÁGINA------------*/
 
-/*Icono volver*/
-.contIcono .icoVolver{
-    width: 50px;
-    margin: 5px;
-}
-
-/*---------------MENÚ CABECERA--------------------*/
-
-.menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/*Título del menú*/
-
-.menu .contTitulo {
+.cabecera .contTitulo {
     width: 100%;
     background-color: rgb(25, 54, 95, 0.85);
     padding: 12px;
 }
 
-
-/*Iconos del menú*/
-
-.menu .contTitulo h2 {
-        text-align: center;
-        color: rgb(255, 255, 255);
-        text-transform: uppercase;
-}
-
-.menu .contIconosMenu {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    background-color: rgb(255, 255, 255, 0.85);
-    padding: 5px;
-}
-
-.menu .icoCerrarSesion {
-    width: 30px;
-}
-
-.menu .icoCarta {
-    width: 30px;
-}
-
-.menu .icoLista {
-    width: 40px;
-}
-
-.menu img {
-    margin: 0 10px;
+.cabecera .contTitulo h2 {
+    text-align: center;
+    color: rgb(255, 255, 255);
+    text-transform: uppercase;
 }
 
 
 
-/*-----------CUERPO PÁGINA-------------*/
+/*----------------CUERPO DE LA PÁGINA---------------*/
 
 
 .cuerpo {
-    background-image: url("../imagenesPanel/imagenesFondo/fondoPaginaLista.jpg");
+       /* background-color: hsla(32, 58%, 55%, 0.85);*/
+
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -123,22 +130,26 @@
     justify-content: center;
 }
 
+
 /*-----------Tabla detalles pedido-------------*/
 
 .tablaDetallesPedido {
-    display: flex;
-    justify-content: center;
+
     padding: 10px;
     margin-top: 120px;
-    background-color: hsla(32, 58%, 55%, 0.85);
+   /* background-color: hsla(32, 58%, 55%, 0.85);
+    background-color: hsla(32, 48%, 59%);*/
+    background-color: hsla(32, 63%, 66%, 0.95);
+    background-color: hsla(32, 97%, 61%, 0.55);
+    background-color: whitesmoke;
+    box-shadow: 4px 4px 4px 2px  rgb(25, 54, 95, 0.85);;
 
     width: 70%;
-    border: 1px solid black;
-    border-radius: 1%;
+    /*border: 1px solid black;*/
+    border-radius: 10px;
 }
 
 .tablaDetallesPedido th, .tablaDetallesPedido td {
-    padding: 10px;
     text-align: center;
 }
 
@@ -161,11 +172,15 @@
     text-align: center;
     padding: 10px;
     padding-bottom: 15px;
-    border-bottom: 1px solid black;
-    border-top: 1px solid black;
+    border: 1px solid black;
+    border-radius: 3%;
     margin-bottom: 120px;
     background-color: hsla(32, 48%, 59%, 0.70);
-
+    background-color: hsla(32, 97%, 61%, 0.85);
+    background-color: whitesmoke;
+    background-color: hsla(32, 97%, 61%, 0.55);
+    width: 70%;
+    border-radius: 10px;
 }
 
 /*Footer*/
@@ -173,8 +188,8 @@
 .footer {
     background-color: rgb(25, 54, 95, 0.85);
     padding: 20px;
-    position: static;
+    position: fixed;
     bottom: 0;
-    margin: 0;
     width: 100%;
+
 }
