--- a/Proyecto/paginaMenu/index.css
+++ b/Proyecto/paginaMenu/index.css
@@ -7,26 +7,22 @@
 
 
 /* --------------- Cabecera  ----------------  */
-
 body {
-    padding-top: 150px;
+    padding-top: 170px;
 }
 
 
 .cabecera {
     width: 100%;
-    border: 1px solid black;
+    border: 1px solid green;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     position: fixed;
     background-color: white;
     background-color: rgb(0, 128, 0, 0.1);
     top: 0;
-    z-index: 1;
-}
-
-.cabecera div  {
-    border: 1px solid green;
 }
 
 
@@ -46,14 +42,15 @@ body {
 /*Contenedor del icono de compra*/
 
 .d2 {
-    width: 10%;
+    width: 100px;
+    height: 90px;
     display: flex;
     justify-content: center;
-    vertical-align: bottom;
-    align-items: flex-end;
+    background-color: rgb(255, 255, 255, 0.7);
+    border-radius: 100%;
+    margin: 4px;
+    border: 2px solid rgb(248, 151, 67);
 }
-
-/*Icono bolsa compra*/
 
 .icoCompra {
     width: 80px;
@@ -62,15 +59,19 @@ body {
     position: relative;
 }
 
+.icoCompra:hover{
+    scale: 1.1;
+}
 
-/*número de la cantidad del icono de compra*/
 
 .d2 #cantidadCarrito {
     position: absolute;
-    bottom: 20px;
+    bottom: 27px;
     right: 24;
     color:rgb(228, 125, 36);
+    color: rgba(44, 160, 206);
 }
+
 
 /* ------------ Menú ----------- */
 
@@ -78,6 +79,7 @@ body {
     display: flex;
     justify-content: center;
     margin: 40px 0;
+    margin-top: 120px;
 }
 
 .menu .tituloPatita .icoPatita {
