--- a/Proyecto/paginaPago/pago.css
+++ b/Proyecto/paginaPago/pago.css
@@ -14,17 +14,15 @@ body {
 
 .cabecera {
     width: 100%;
-    border: 1px solid black;
+    border: 1px solid green;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     position: fixed;
     background-color: white;
     background-color: rgb(0, 128, 0, 0.1);
     top: 0;
-}
-
-.cabecera div  {
-    border: 1px solid green;
 }
 
 
@@ -44,11 +42,14 @@ body {
 /*Contenedor del icono de compra*/
 
 .d2 {
-    width: 10%;
+    width: 100px;
+    height: 90px;
     display: flex;
     justify-content: center;
-    vertical-align: bottom;
-    align-items: flex-end;
+    background-color: rgb(255, 255, 255, 0.7);
+    border-radius: 100%;
+    margin: 4px;
+    border: 2px solid rgb(248, 151, 67);
 }
 
 .icoCompra {
@@ -58,16 +59,14 @@ body {
     position: relative;
 }
 
-/*.d2 .icoCompra:hover {
-    scale: 1.3;
-}*/
 
 
 .d2 #cantidadCarrito {
     position: absolute;
-    bottom: 18px;
+    bottom: 27px;
     right: 24;
     color:rgb(228, 125, 36);
+    color: rgba(44, 160, 206);
 }
 
 
@@ -78,6 +77,7 @@ body {
     display: flex;
     justify-content: center;
     margin: 40px 0;
+    margin-top: 140px;
 }
 
 .cuerpo .tituloPatita .icoPatita {
@@ -106,7 +106,6 @@ body {
 
 .contenedorPedido {
     margin: 30px 0;
-    border: 1px solid green;
     display: flex;
     flex-direction: column;
     padding: 40px;
@@ -183,9 +182,6 @@ h3 {
     width: 60%;
 }
 
-/*.formularioPago label {
-    text-decoration: underline;
-}*/
 
 .formularioPago input, .formularioPago select {
     width: 220px;
@@ -221,6 +217,17 @@ h3 {
     background-color: rgb(0, 128, 0, 0.1);
 }
 
+
+/*----------Anuncio----------*/
+
+#anuncio {
+    max-width: 750px;
+    margin: auto;
+    display: block;
+    margin: 60px auto;
+}
+
+
 /*----------Footer----------*/
 
 
@@ -232,7 +239,7 @@ h3 {
     justify-content: space-around;
     padding: 50px;
     width: 100%;
-    margin-top: 300px;
+    margin-top: 150px;
 }
 
 .footer p {
