Commit 18 rama Admin
Creadas funciones en la carta para agregar y modificar platos, en proceso opción de eliminar platos y subir imágenes.

--- a/proyectoPanel/paginaDetallesPedido/detallePedido.css
+++ b/proyectoPanel/paginaDetallesPedido/detallePedido.css
@@ -142,6 +142,8 @@
     background-color: hsla(32, 63%, 66%, 0.95);
     background-color: hsla(32, 97%, 61%, 0.55);
     background-color: whitesmoke;
+    background-color: hsla(32, 97%, 61%, 0.55);
+
     box-shadow: 4px 4px 4px 2px  rgb(25, 54, 95, 0.85);;
 
     width: 70%;
