--- a/proyectoPanel/paginaModificarProducto/modificarProducto.css
+++ b/proyectoPanel/paginaModificarProducto/modificarProducto.css
@@ -132,12 +132,15 @@
     width: 70%;
     margin: 30px auto;
     background-color: hsla(32, 58%, 55%, 0.95);
+    background-color: rgba(159, 192, 238, 0.85);
+    background-color: hsla(32, 97%, 61%, 0.55);
+
     border: 1px solid black;
     border-radius: 1%;
 }
 
 
-.formularioModif input, textarea {
+.formularioModif input, textarea, select {
     margin-bottom: 25px;
     margin-top: 10px;
     padding: 5px;
