--- a/Proyecto/paginaMenu/index.css
+++ b/Proyecto/paginaMenu/index.css
@@ -130,7 +130,7 @@ h2 {
 
 
 /****** Formato platos del menu ******/
-.prueba1 {
+.cebeceraEtiqueta {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid green;
@@ -163,8 +163,9 @@ h2 {
 }
 
 .imgTexto p {
-    margin: 10px;
+    padding: 30px;
     text-align: center;
+    font-size: 20px;
 }
 
 /****  Botones de añadir y borrar elementos  *****/
@@ -208,7 +209,7 @@ img.icoMenos {
 }
 
 
-/*---------Footer---------*/
+/*------------------FOOTER-----------------*/
 
 .footer{
     background-color: rgb(228, 125, 36);
