--- a/proyectoPanel/paginaListaPedidos/listaPedidosMovil.css
+++ b/proyectoPanel/paginaListaPedidos/listaPedidosMovil.css
@@ -1,11 +1,15 @@
+/*---------RESPONSIVE PARA PANTALLAS PEQUEÑAS----------*/
 
+/* Estilo contenedor iconos cabecera */
 
-.iconosNac .contIcono {
-    width: 50px;
+body .cabecera .iconosNav  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
-/*Cuerpo*/
+/* Estilo cuerpo de la página */
 
 .cuerpo {
     display: flex;
@@ -14,6 +18,11 @@
     width: 100%;
 }
 
+/* Estilo tabla de pedidos */
+
+.cuerpo .tablaPedidos {
+    padding: 5px;
+}
 
 .cuerpo .tablaPedidos, .tablaPedidos select {
     font-size: 10px;
@@ -21,16 +30,15 @@
     padding: 0;
 }
 
-
 .tablaPedidos tr {
     width: 90%;
+    border-radius: 20px;
 }
 
 .tablaPedidos td, .tablaPedidos th {
     padding: 0;
     margin: 0;
 }
-
 
 .tablaPedidos .iconoPedido {
     width: 25px;
