--- a/Proyecto/paginaPago/pago.css
+++ b/Proyecto/paginaPago/pago.css
@@ -111,6 +111,8 @@ body {
     padding: 40px;
 }
 
+/*----------LÍNEAS DE PEDIDO---------*/
+
 .lineaP {
     display: flex;
     margin: 10px;
@@ -118,6 +120,7 @@ body {
 
 .lineaP p {
     margin: 0 20px;
+    font-size: 20PX;
 }
 
 hr {
@@ -143,13 +146,18 @@ hr {
     margin: 15px 0;
 }
 
+
+/*----------PRECIO TOTAL DEL PEDIDO---------*/
+
+
 .pTotal {
     text-align: center;
+    font-size: 20px;
 }
 
 
 
-/*------------Formulario de pago--------------*/
+/*------------FORMULARIO DE PAGO--------------*/
 
 .contenedorForm {
     border: 1px solid rgba(44, 160, 206);
@@ -162,6 +170,7 @@ h3 {
 }
 
 
+
 .formularioPago {
     margin: 10px;
     display: flex;
@@ -172,7 +181,7 @@ h3 {
     align-items: center;
     margin: 30px 0;
     width: 100%;
-
+    font-size: 20px;
 }
 
 .formularioPago div {
@@ -185,10 +194,12 @@ h3 {
 
 .formularioPago input, .formularioPago select {
     width: 220px;
+    height: 30px;
 }
 
 .formularioPago select {
     text-align: center;
+    font-size: 18px;
 }
 
 
@@ -205,12 +216,13 @@ h3 {
     width: 90%;
 }
 
-/* Botón del formulario */
+/*----------BOTÓN DEL FORMULARIO----------*/
 
 .formularioPago button {
     padding: 5px;
     margin: 20px 0;
     transition: background-color 1s ease;
+    font-size: 15PX;
 }
 
 .formularioPago button:hover{
@@ -218,7 +230,7 @@ h3 {
 }
 
 
-/*----------Anuncio----------*/
+/*----------ANUNCIO----------*/
 
 #anuncio {
     max-width: 750px;
@@ -228,7 +240,7 @@ h3 {
 }
 
 
-/*----------Footer----------*/
+/*----------FOOTER----------*/
 
 
 .footer{
