--- a/proyectoPanel/paginaListaPedidos/listaPedidos.css
+++ b/proyectoPanel/paginaListaPedidos/listaPedidos.css
@@ -156,7 +156,7 @@
 .footer {
     background-color: rgb(25, 54, 95, 0.85);
     padding: 20px;
-    position: static;
+    position: fixed;
     bottom: 0;
     margin: 0;
     width: 100%;
