--- a/Proyecto/paginaPago/pago.css
+++ b/Proyecto/paginaPago/pago.css
@@ -127,10 +127,25 @@ hr {
     margin: 10px 0;
 }
 
-img.icoMenos {
-    width: 37px;
+/*----------ICONOS DE SUMAR Y RESTAR---------*/
+
+
+img.icoMenos{
+    width: 40px;
     height: 30px;
 }
+
+img.icoMas {
+    width: 32px;
+    margin: 0 15px;
+}
+
+.icoMas:hover, .icoMenos:hover{
+    /*    scale: 1.3;*/
+        border: 1px solid green;
+    
+    }
+
 
 .lineaP button {
     margin: 20px;
@@ -222,7 +237,7 @@ h3 {
     padding: 5px;
     margin: 20px 0;
     transition: background-color 1s ease;
-    font-size: 15PX;
+    font-size: 15px;
 }
 
 .formularioPago button:hover{
