--- a/Proyecto/paginaPago/estilos/pago.css
+++ b/Proyecto/paginaPago/estilos/pago.css
@@ -80,6 +80,7 @@ body {
     margin-top: 140px;
 }
 
+/*Icono patita*/
 .cuerpo .tituloPatita .icoPatita {
     position: relative;
     text-align: center;
@@ -91,6 +92,7 @@ body {
 }
 
 
+/*Título del icono patita*/
 .cuerpo .tituloPag { 
     padding: 50px;
     position: absolute;
@@ -100,9 +102,14 @@ body {
 }
 
 
+/*Texto carrito vacío*/
 .titCarVacio {
     text-align: center;
 }
+
+
+/*----------CONTENEDOR DE PEDIDO CON LÍNEAS DE PEDIDO---------*/
+
 
 .contenedorPedido {
     margin: 30px 0;
@@ -111,7 +118,7 @@ body {
     padding: 40px;
 }
 
-/*----------LÍNEAS DE PEDIDO---------*/
+/*Líneas de pedido*/
 
 .lineaP {
     display: flex;
@@ -127,9 +134,7 @@ hr {
     margin: 10px 0;
 }
 
-/*----------ICONOS DE SUMAR Y RESTAR---------*/
-
-
+/*Iconos de sumar y restar*/
 img.icoMenos{
     width: 40px;
     height: 30px;
@@ -144,7 +149,7 @@ img.icoMas {
         border: 1px solid green;
 }
 
-
+/*Estilo botones*/
 .lineaP button {
     margin: 20px;
     border: none;
@@ -168,8 +173,6 @@ hr {
     font-size: 20px;
 }
 
-
-
 /*------------FORMULARIO DE PAGO--------------*/
 
 .contenedorForm {
@@ -181,8 +184,6 @@ h3 {
     background-color:  rgb(228, 125, 36);
     padding: 0 50px;
 }
-
-
 
 .formularioPago {
     margin: 10px;
