--- a/proyectoPanel/paginaLogin/estilos/login.css
+++ b/proyectoPanel/paginaLogin/estilos/login.css
@@ -33,7 +33,7 @@
 }
 
 body {
-    background-image: url("../imagenesPanel/imagenesFondo/fondoLogin.jpg");
+    background-image: url("../../imagenesPanel/imagenesFondo/fondoLogin.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
