--- a/proyectoPanel/paginaModificarCarta/estilos/modificarCarta.css
+++ b/proyectoPanel/paginaModificarCarta/estilos/modificarCarta.css
@@ -1,6 +1,3 @@
-
-/*INDICACIONES GENERALES*/
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -8,34 +5,35 @@
     font-family: league system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+
 /*---------------------------CABECERA------------------------------*/
 
 
 .cabecera {
     display: flex;
     flex-direction: column;
-    background-image: url("../imagenesPanel/imagenesFondo/fondoCabecera.jpg"); /* Fondo de la cabecera */
+    background-image: url("../../imagenesPanel/imagenesFondo/fondoCabecera.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     width: 100%;
+
     position: fixed;
     top: 0;
 }
 
-
 /*--------------ICONOS DE LA CABECERA-----------*/
 
-.cabecera .iconosNav {  /* Estilo del contenedor de iconos */ 
+.cabecera .iconosNav {
     display: flex;
     align-items: center;
     justify-content: flex-end;
     width: 100%;
+    display: flex;
     background-color: rgb(255, 255, 255, 0.85);
 }
 
-
- .iconosNav .icoCerrarSesion, .iconosNav .icoCarta { 
+.iconosNav .icoCerrarSesion, .iconosNav .icoCarta { 
     width: 40px; 
 }
 
@@ -50,13 +48,11 @@
 .iconosNav a:not(#visitado):hover { 
     scale: 1.2; 
 }
+/*------------LOGO-------------*/
 
 
-
-/*---------------LOGO ----------------*/
-
-
-.contLogo { /* Estilo del contenedor del logo */
+/*Contenedor del logo*/
+.contLogo {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -70,8 +66,7 @@
 }
 
 
-.cabecera .contLogo .logo { /* Estilo del logo */
-
+.cabecera .contLogo .logo {
     width: 150px;
     margin: 10px;
 }
@@ -82,6 +77,7 @@
 .cabecera .contTitulo {
     width: 100%;
     background-color: rgb(25, 54, 95, 0.85);
+    
     padding: 12px;
 }
 
@@ -90,75 +86,109 @@
     color: rgb(255, 255, 255);
     text-transform: uppercase;
 }
+/*--------------------CUERPO PÁGINA-------------------*/
 
 
-/*----------------CUERPO PÁGINA-----------------*/
+/*Fondo de imagen para todo el cuerpo*/
 
 .cuerpo {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 300px;
+
+    width: 100%;
+    margin-top: 260px;
 }
 
-/*---------TABLA DE PEDIDOS----------*/
 
 
-.tablaPedidos {
-    /*display: flex;
-    justify-content: center;*/
-    width: 85%;
-    margin: 70px auto;
+/*---------Mensaje de confirmación----------*/
+
+
+.contMensaje {
+    margin-top: 120px;
+    text-transform: uppercase;
+    font-weight: 700;
+    background-color: rgb(151, 173, 114);
     padding: 20px;
-    margin-top: 50px;
+    box-shadow: 4px 4px 4px 2px  rgb(112, 129, 82);
 
-    background-color: hsla(32, 97%, 61%, 0.55);
-    border: 1px solid black;
-    border-radius: 20px;
 }
 
-.tablaPedidos th, .tablaPedidos td {
-    padding: 10px;
+
+/*-----------Categorías----------------*/
+
+.contenedorCategorias {
+    margin: 100%;
+    margin: 30px;
+}
+
+
+.contenedorCategorias h3 {
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 60px;
+    margin-bottom: 10px;
+}
+
+.contenedorCategorias .descripcion {
+    text-align: justify;
+    width: 320px;
+}
+
+.categoria {
+   /* display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap; */
+    width: 100%;
+    height: auto;
+    vertical-align: middle;
+    margin: auto;
+    border: 1px solid #44699c;
+    border-radius: 10px;
+    padding: 20px;
+    background-color: hsla(32, 97%, 61%, 0.55);
+
+}
+
+.categoria th {
+    text-decoration: underline;
+}
+
+.categoria th, .categoria td {
+    padding: 5px 20px;
     text-align: center;
 }
-
-.tablaPedidos th {
-    text-decoration: underline;
-    text-transform: uppercase;
+.categoria td {
+    font-size: 15px;
 }
 
-.tablaPedidos td {
-    font-weight: 600;
+.iconoMod {
+    width: 45px;
 }
 
-
-/*Colores de los estados*/
-
-.tablaPedidos .Entregado {
-    background-color: rgb(151, 173, 114);
-}
-
-.iconoPedido {
+.iconoAn, .iconoBor {
     width: 35px;
+    margin: 10px 0;;
 }
 
-
-
-.iconoPedido:hover{
+.iconoMod:hover, .iconoAn:hover, .iconoBor:hover {
     background-color: rgb(255, 255, 255, 0.55);
     border-radius: 100%;
     scale: 1.2;
 }
 
-/*Footer*/
 
 .footer {
     background-color: rgb(25, 54, 95, 0.85);
     padding: 20px;
-    position: fixed;
     bottom: 0;
-    margin: 0;
     width: 100%;
+    margin-top: 50PX;
 }
-
